--- a/src/Styles/Cardstyles.css
+++ b/src/Styles/Cardstyles.css
@@ -1,3 +1,15 @@
+html {
+    height: 100%;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
 .card {
     margin: 10px auto;
     background: var(--grad-one);
