--- a/src/Styles/LoginPage.css
+++ b/src/Styles/LoginPage.css
@@ -7,6 +7,13 @@
     height: 100vh;
 }
 
+@media only screen and (max-width: 700px) {
+    .mainLoginPage {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 .title {
     display: flex;
     flex-direction: column;
