--- a/src/Styles/Cardstyles.scss
+++ b/src/Styles/Cardstyles.scss
@@ -86,3 +86,8 @@ html {
   text-align: center;
   margin: 20px auto;
 }
+.logoutbtn {
+  position: absolute !important;
+  top: 10px;
+  right: 10px;
+}
