added thumbs buttons with percent calculation of currect and incorrect answers with visual pie graph, improve login page and changed logout icon

--- a/src/Styles/Cardstyles.scss
+++ b/src/Styles/Cardstyles.scss
@@ -86,8 +86,11 @@ html {
   text-align: center;
   margin: 20px auto;
 }
-.logoutbtn {
-  position: absolute !important;
-  top: 10px;
-  right: 10px;
+
+.checkbtns {
+  display: flex;
+}
+
+.percentbtn {
+  margin-inline: 10px !important;
 }
