--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -59,3 +59,22 @@ body {
   font-family: 'Pacifico', cursive;
   user-select: none;
 }
+
+.logoutbtn {
+  position: absolute !important;
+  top: 10px;
+  right: 10px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-family: 'Pacifico', cursive;
+
+  .restartbtn {
+    margin-top: 10px !important;
+  }
+}
+
