--- a/src/Styles/Cardstyles.scss
+++ b/src/Styles/Cardstyles.scss
@@ -15,15 +15,14 @@ html {
   flex-direction: column;
   height: 100vh;
 }
-
+.cardWrapper {
+  position: relative;
+}
 .card {
   margin: 10px auto;
   background: var(--grad-one);
   height: 350px;
   width: 350px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: #ffffff;
   font-size: 24px;
   font-weight: 400;
@@ -31,7 +30,6 @@ html {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1), 0px 4px 8px rgba(0, 0, 0, 0.1),
   0px 8px 16px rgba(0, 0, 0, 0.1), 0px 16px 32px rgba(0, 0, 0, 0.1);
   position: relative;
-  cursor: pointer;
   transition: 250ms;
   transform-style: preserve-3d;
   transform: perspective(1000px) rotateY(var(--rotate-y, 0)) translateY(var(--translate-y, 0));
@@ -45,8 +43,12 @@ html {
   .front,
   .back {
     position: absolute;
-    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
   }
 
   .front {
@@ -93,4 +95,17 @@ html {
 
 .percentbtn {
   margin-inline: 10px !important;
+}
+
+.speaker {
+  position: absolute;
+  bottom: 1rem;
+  padding: 0.2rem;
+  //border: 1px black solid;
+  z-index: 99;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
